# airflow-provider-census

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  LICENSE.txt  README.md  pyproject.toml
airflow_provider_census/: __init__.py
airflow_provider_census/example_dags/: example_census.py
airflow_provider_census/hooks/: census.py
airflow_provider_census/links/: __init__.py  census.py
airflow_provider_census/operators/: census.py
airflow_provider_census/sensors/: census.py
airflow_provider_census/triggers/: __init__.py  census.py
tests/: conftest.py
tests/hooks/: test_census.py
tests/links/: test_census.py
tests/operators/: test_census.py  test_census_operator
tests/sensors/: test_census.py
tests/triggers/: test_census.py
