[tool.poetry]
name = "airflow-provider-census"
version = "1.0.0"
description = "A Census provider for Apache Airflow."
license = "MIT"
authors = ["Census <dev@getcensus.com>"]
readme = "README.md"
homepage = "https://www.getcensus.com/"
repository = "https://github.com/sutrolabs/airflow-provider-census"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sutrolabs/airflow-provider-census/issues"

[tool.poetry.plugins.apache_airflow_provider]
provider_info = "airflow_provider_census.__init__:get_provider_info"

[tool.poetry.dependencies]
python = "^3.6"
apache-airflow = ">= 1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
