[tool.poetry]
name = "airflow-provider-census"
version = "1.3.0"
description = "A Census provider for Apache Airflow."
license = "MIT"
authors = ["Census <dev@getcensus.com>"]
readme = "README.md"
homepage = "https://www.getcensus.com/"
repository = "https://github.com/sutrolabs/airflow-provider-census"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sutrolabs/airflow-provider-census/issues"

[tool.poetry.plugins.apache_airflow_provider]
provider_info = "airflow_provider_census.__init__:get_provider_info"

[tool.poetry.dependencies]
python = ">= 3.11,<4.0"
apache-airflow = ">= 1.10"
apache-airflow-providers-http = ">= 1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
requests-mock = "^1.9.3"
# workaround for https://github.com/python-poetry/poetry/issues/9293
docutils = "0.21"
pendulum = "2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
